removed mounted data to prevent screen flickering

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -1,17 +1,21 @@
 @font-face {
     font-family: 'CodeDemo-Light';
     src: url("../fonts/CodeDemo-Light.otf");
+    font-display: fallback;
+
 }
 
 @font-face {
     font-family: 'OpenSans-Regular';
-    src: url("../fonts/OpenSans-Regular.ttf")
+    src: url("../fonts/OpenSans-Regular.ttf");
+    font-display: fallback;
 }
 
 @font-face {
     font-family: 'CodeDemo-Bold';
     font-weight: bold;
     src: url("../fonts/CodeDemo-Bold.otf");
+    font-display: fallback;
 }
 
 // Font-Size
@@ -145,7 +149,7 @@ span {
 
 .navbox {
     display: flex;
-    height: 100%;
+    // height: 100%;
     align-items: center;
   
     @media (max-width: 768px) {
@@ -383,17 +387,13 @@ body {
 
 nav {
     display: flex;
-  flex-direction: column;
-  min-height: 100px;
-  position: relative;
-  justify-content: space-evenly;
-  align-items: center;
+    align-items: center;
+
   text-transform: uppercase;
   border-bottom: 2px solid #33333320;
-  margin: 0 auto;
-  padding: 0 2vw;
+  margin: 0;
+  padding: 0 2rem;
   z-index: 2;
-  align-self: center;
 
   @media (max-width: 768px) {
     position: sticky;
@@ -405,6 +405,12 @@ nav {
     right: 0;
     left: 0;
     z-index: 2;
+  }
+
+  @media #{$mq-small} {
+    height: 125px;
+    flex-direction: column;
+    justify-content: space-evenly;
   }
 }
 
